# ox

./: .env.example  Cargo.toml  Makefile  README.md  function_call_response.json  message_response.json  plan.md
src/: agent.rs  api.rs  app_context.rs  auth.rs  cli.rs  main.rs  prompt.rs  tools.rs
src/agent/: events.rs  handler.rs  mod.rs  stream.rs  stream_tests.rs
src/auth/: config.rs  mod.rs  store.rs  subscriptions.rs
src/llms/: openai.rs
src/session/: manager.rs  mod.rs  naming.rs  store.rs
src/tools/: bash.rs  edit.rs  find.rs  grep.rs  ls.rs  mod.rs  read_file.rs  tool_result.rs  truncate.rs  write_file.rs
