[package]
name = "ox"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
futures = "0.3.31"
jsonwebtoken = "10.3.0"
reqwest = { version = "0.13.1", features = ["json", "stream", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "signal"] }
